@startuml
left to right direction
skinparam linetype ortho
skinparam nodesep 100 
skinparam ranksep 140
skinparam DefaultFontName "Ubuntu"

' ==========================================
' 1. ENUMERADORES
' ==========================================

package ENUMS <<Frame>> #ffe9d4{
    enum estadoVenta{
        ABIERTA
        CANCELADA
        CERRADA
    }

    enum estadoPago{
        PENDIENTE
        PAGADA
        RECHAZADO
    }

    enum metodoPago{
        CREDITO
        DEBITO
        EFECTIVO
        MERCADOPAGO
    }

    enum tipoDescuento{
        MONTOFIJO
        PORCENTAJE
    }

    enum tipoAuth{
        MANUAL
        GOOGLE
    }
}

namespace MODELS #ffffd4{
    entity PERSONAS{
        - email : string
        - psw : string
        - tipoAuth : string
        - nombre : string
        - apellido : string
        - telefono : string
        - fechaBaja : date
        - fechaCreacion : date
        - activo : bool
    }

    entity EMPRENDEDORES{
        - cuit : int
        - mpAccessToken : string
    }

    entity CLIENTES{
        - suscripcion : boolean
    }



    entity TIENDAS{
        - idPlantilla : int
        - nombreTienda : string
        - logoTienda : string
        - personalizacionTienda: json
        - fechaCreacion : date
    }



    entity PRODUCTOS{
        - tipoProd : string
        - nombreProd : string
        - imagenProd : string
        - descripProducto : string
        - precio : number
        - activo : boolean
        + calcularPrecioVenta() : number
    }


    entity categoriasProductos{
        - categoria : string
    }

    entity productosDigitales{
        - archivoProd : string
    }

    entity productosFisicos{
        - stock : int
        + actualizarStock(cant: int, signo: int): void
        + validarStock(cant: int): boolean
        + verificarEstadoStock(): boolean
        + getStockActual(): int
        + getDetallesStock(): String
    }

    entity cuponesDescuentos{
        - codigo : string
        - tipoDescuento : tipoDescuento
        - valor : number
        - fechaExpiracion : date
        - usosMaximos : number
        - usosActuales : number
    }

    entity VENTAS{
        - fechaVenta : date
        - precioFinal : number
        - estadoVenta : estadoVenta
    }

    entity detalleVenta{
        - precioUnitario : number
        - cantidad : int
        - subtotal : number
    }

    entity licenciaVenta{
        - claveDigital: string
        - claveUsada : boolean
    }

    entity tarjetasPagos{
        - servicio : string
        - servicioClienteID : string
        - servicioTarjetaID : string
        - ultDigitosTarjeta : string
        - marcaTarjeta : string
        - expiraMes : int
        - expiraAno : int
        - porDefecto : boolean
    }

    entity CORREOS{
        - asunto : string
        - mensaje : string
        - cantidadEnviados : int
        - estado : string
        - idExterno : string
    }

    class Ubicaciones{
        - pais: string
        - provincia: string
        - ciudad : string
        - codigoPostal : string
        - placeId : string
    }

        class detallePago{
        - estado : string
        - metodoPago : string
        - monto : number
        - fechaPago : string
    }

    entity atributosCategoria{
    - nombreAtributo : string
}
    entity especificacionesProducto{
    - valor : string
}


}

package JSONS <<Frame>> #ffd4d4 {

    json personalizacionTienda{
        "colorPrimario" : "string",
        "colorSecundario" : "string",
        "fuente" : "string",
        "banner" : "string",
        "redesSociales" : "json"
    }

}

' ==========================================
' CAPA DE PERSISTENCIA (Servicios)
' ==========================================

namespace SERVICIES #ddffd4{
    class servicePersonas{
        + verificarExistenciaUsuario() : boolean
        + guardarPersona(usuario : PERSONAS) : void
        + modificarDatosUsuario() : void
    }

    class serviceEmprendedores{
        + guardarEmprendedor(emprendedor : EMPRENDEDORES) : void
        + buscarEmprendedor() : EMPRENDEDORES
        + guardarFuenteIngreso() : void
    }

    class serviceClientes {
        + guardarCliente(cliente : CLIENTES) : void
        + buscarClientes(): CLIENTES
        + obtenerTodos(): List<CLIENTES>
        + guardarTarjeta() : void
        + eliminarTarjeta() : void
        + obtenerTarjeta() : tarjetasPagos
        + obtenerClientesSuscriptos(suscripcion : true) : List<CLIENTES>
    }

    class serviceTiendas{
        + crearTienda(tienda: TIENDAS) : void
        + guardarTienda(tienda : TIENDAS) : void
        + modificarTienda(tienda : TIENDAS) : void
        + buscarPorNombre(nombreTienda : string): TIENDAS
        + obtenerTodas(): List<TIENDAS>
    }

    class serviceProductos {
        + guardarProducto(producto : PRODUCTOS)
        + modificarProducto(producto : PRODUCTOS)
        + buscarProductos(): List<PRODUCTOS>
        + obtenerTodos(): List<PRODUCTOS>
        + guardarEspecificacion(e: EspecificacionesProducto) : void
        + obtenerEspecificacionesPorProducto(idProducto: int) : List<EspecificacionesProducto>
        + obtenerAtributosPorCategoria(idCat: int) : List<atributosCategoria>
    }

    class serviceCuponesDescuentos{
        + guardarCuponDesc(cupon : cuponesDescuentos)
        + modificarCuponDesc(cupon : cuponesDescuentos)
        + buscarCuponDesc(): List<cuponesDescuentos>
        + obtenerTodos(): List<cuponesDescuentos>
    }

    class serviceVenta{
        + crearVenta() : void
        + obtenerVentas() : void
        + obtenerDetalleVenta() : void
    }

    class servicePagos{
        + obtenerDetallesPago() : void
        + realizarPago() : void
        + agregarDatosPagoCliente() : void
        + aplicarDescPago() : void
    }
    
    class serviceCorreos{
        + enviarCorreo() : void
    }
}

' =========================================
'  CONTROLADORES
' ==========================================

namespace CONTROLLERS #d4fff1{
    class controladorUsuarios{
        + registrarseManual() : void
        + registrarseGoogle() : void
        + loggearseManual() : void
        + loggearseGoogle() : void
        + crearEmprendedor() : void
        + modificarDatosUsuario() : void
        + agregarFuenteIngreso() : void
        + crearCliente() : void
        + obtenerClientes() : void
        + agregarTarjeta() : void
        + eliminarTarjeta() : void
        + obtenerTarjetas() : void
    }


    class controladorTiendas{
        + crearTienda() : void
        + modificarTienda() : void
        + eliminarTienda() : void
        + crearCategoria() : void
        + obtenerCategorias() : void
        + crearCuponesDesc() : void
        + modificarCuponesDesc() : void
        + eliminarCuponesDesc() : void
        + enviarCorreo() : void
    }

    class controladorProductos{
        + crearProd() : void
        + modificarProd() : void
        + eliminarProd() : void
        + obtenerInfoProd() : void
        + verificarKeyDigital() : void
        + crearAtributo() : void
        + obtenerAtributosPorCategoria() : void
    }

    class controladorCheckOut{
        + crearVenta() : void
        + obtenerVentas() : void
        + obtenerDetalleVenta() : void
        + crearPago() : void
        + realizarPago() : void
        + aplicarDescPago() : void
        + obtenerDetallesPago() : void
    }

}

' =========================================
'  RELACIONES
' ==========================================
VENTAS -- estadoVenta
detallePago -- estadoPago
detallePago -- metodoPago
cuponesDescuentos -- tipoDescuento
PERSONAS -- Ubicaciones
PERSONAS -- tipoAuth
TIENDAS *-- personalizacionTienda
CLIENTES -- VENTAS
CLIENTES -- tarjetasPagos
productosDigitales -- licenciaVenta
TIENDAS -- PRODUCTOS
TIENDAS -- CLIENTES
TIENDAS ---- VENTAS
detalleVenta -- licenciaVenta
cuponesDescuentos -- TIENDAS
detallePago -- VENTAS
PRODUCTOS -- cuponesDescuentos
categoriasProductos *--  atributosCategoria
PRODUCTOS *-- especificacionesProducto
atributosCategoria -- especificacionesProducto
' Herencia
' ____________________________________
PERSONAS <|--- EMPRENDEDORES
PERSONAS <|---- CLIENTES
PRODUCTOS <|-- productosDigitales
PRODUCTOS <|-- productosFisicos
' Dependencias
' ____________________________________
controladorUsuarios --> servicePersonas
controladorCheckOut --> servicePagos
controladorUsuarios --> serviceClientes
controladorTiendas --> serviceCuponesDescuentos
controladorUsuarios --> serviceEmprendedores
controladorProductos --> serviceProductos
controladorProductos --> serviceCuponesDescuentos
controladorTiendas --> serviceTiendas
controladorTiendas --> serviceCorreos
' Agregaciones
' ____________________________________
serviceClientes o-- CLIENTES
serviceProductos o-- PRODUCTOS
serviceTiendas o-- TIENDAS
servicePagos o-- tarjetasPagos
serviceCuponesDescuentos o-- cuponesDescuentos
servicePagos o-- detallePago
serviceEmprendedores o-- EMPRENDEDORES
servicePersonas o-- PERSONAS
serviceCorreos o-- CORREOS
serviceVenta o-- VENTAS
' ____________________________________
' Dependencia débiles
PRODUCTOS ..> categoriasProductos
servicePagos ..> detallePago
servicePagos ..> VENTAS
servicePagos ..> detalleVenta
servicePagos ..> CLIENTES
serviceClientes ..> tarjetasPagos
serviceProductos ..> categoriasProductos
serviceProductos ..> especificacionesProducto
serviceProductos ..> atributosCategoria
serviceVenta ..> detalleVenta

' ____________________________________
' Composiciones
VENTAS *-- detalleVenta

@enduml